<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/primary_light"
              tools:context="com.mj.minhajlib.spotfoodcenter.FragmentFastFoodThree">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/deal_gradient"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="4 SEASON"
            android:textColor="@color/secondary_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="PIZZAS"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="STUF CRUST"
            android:textColor="@color/secondary_text"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_price_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="casual"
            android:text="@string/large_13"
            android:textColor="@color/accent"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/tv_price_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/tv_price_large"
            android:fontFamily="casual"
            android:text="@string/regular_11"
            android:textColor="@color/accent"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/tv_price_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/tv_price_medium"
            android:fontFamily="casual"
            android:text="@string/personal_7"
            android:textColor="@color/accent"
            android:textSize="10sp"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:id="@+id/layout_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/accent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/extra_topping"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/extra_cheese"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/extra_chicken"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
    </LinearLayout>
</LinearLayout>