<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/primary_light"
              tools:context="com.mj.minhajlib.spotfoodcenter.FragmentFastFoodTwo">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ExpandableListView
            android:id="@+id/exp_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

        </ExpandableListView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/accent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upsize"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upsize_fries"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:fontFamily="casual"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upsize_rs"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:fontFamily="casual"/>
    </LinearLayout>

</LinearLayout>